--- a/build.gradle
+++ b/build.gradle
@@ -159,3 +159,23 @@ def myCurseRelatons = {
     requiredLibrary 'curios'
     optionalLibrary 'jei'
 }
+
+
+//curseforge {
+//
+//    def curseProp = new Properties()
+//    File secretPropsFile = file("key.properties")
+//    curseProp.load(secretPropsFile.newInputStream())
+//
+//
+//    project {
+//        apiKey = curseProp.getProperty('curseKey')
+//        id = "${curse_id}"
+//        releaseType = "${curse_release}"
+//        changelogType = 'text'
+//        changelog = file('CHANGELOG.txt')
+//        addGameVersion("Forge")
+//        relations(myCurseRelatons)
+//        addArtifact(deobfJar)
+//    }
+//}
